bugfix unmatching file-extensions, expand/collapse items

--- a/styles/outline.less
+++ b/styles/outline.less
@@ -77,4 +77,9 @@
       position: absolute;
     }
   }
+
+  .hidden{
+    display:none;
+  }
+
 }
